# tmp-uv-proj

./: pyproject.toml
libtmp/: README.md  main.py  pyproject.toml
libtmp/pythoncode/: code02.py  code03.py
libtmp/shfiles/: file_organizer.sh  hello_world.sh  network_check.sh  password_generator.sh  rename_files.sh  server_monitor.sh
projtmp/: README.md  main.py  pyproject.toml
