[project]
name = "libtmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Глазов Николай", email = "n.glazov@infinet.ru" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
libtmp = "libtmp:main"

[build-system]
requires = ["uv_build>=0.7.21,<0.8"]
build-backend = "uv"
