[project]
name = "projtmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["libtmp", "ipython (>=9.4.0,<10.0.0)"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8"]
build-backend = "uv_build"

[tool.uv.sources]
libtmp = { path = "../libtmp"}

